php artisan infyom:scaffold Tweet --fieldsFile=Tweet.json
